--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,8 @@
 project(CBS_Tests)
+
+include_directories(../src/base)
+link_directories(../src/base)
+
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 add_executable(TESTS base_tests/ModelTests.cpp base_tests/FormTests.cpp)
-target_link_libraries(TESTS gtest gtest_main)
+target_link_libraries(TESTS gtest gtest_main BaseLib)
