modify View calling flow

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ set( CBS_SOURCES main.cpp admin/forms/UserCreateUpdateForm.cpp admin/forms/UserC
         users/views/UserCreateView.h users/views/UserUpdateView.cpp users/views/UserUpdateView.h
         admin/views/AdminPanelView.cpp admin/views/AdminPanelView.h admin/views/AdminDetailView.cpp
         admin/views/AdminDetailView.h admin/views/UnseenSlotRequestListView.cpp admin/views/UnseenSlotRequestListView.h
-        admin/views/DeleteUserView.cpp admin/views/DeleteUserView.h admin/views/RoomCreateView.cpp
+        users/views/UserDeleteView.cpp users/views/UserDeleteView.h admin/views/RoomCreateView.cpp
         admin/views/RoomCreateView.h admin/views/RoomDetailView.cpp admin/views/RoomDetailView.h
         admin/views/RoomUpdateView.cpp admin/views/RoomUpdateView.h booking/models/Room.cpp booking/models/Room.h
         booking/models/Slot.cpp booking/models/Slot.h booking/forms/SlotCreateUpdateForm.cpp
@@ -19,7 +19,7 @@ set( CBS_SOURCES main.cpp admin/forms/UserCreateUpdateForm.cpp admin/forms/UserC
         booking/views/SlotCreateView.h booking/views/SlotUpdateView.cpp booking/views/SlotUpdateView.h
         booking/views/SlotNotificationListView.cpp booking/views/SlotNotificationListView.h
         booking/views/FacultyProfileUpdateView.cpp booking/views/FacultyProfileUpdateView.h
-        init/Application.cpp init/Application.h init/views/SplashView.cpp init/views/SplashView.h )
+        init/Application.cpp init/Application.h init/views/SplashView.cpp init/views/SplashView.h admin/views/RoomDeleteView.cpp admin/views/RoomDeleteView.h booking/views/SlotDeleteView.cpp booking/views/SlotDeleteView.h)
 
 add_executable(${PROJECT_NAME} ${CBS_SOURCES})
 
